--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,6 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      
+    - name: Install SDL
+      run: sudo apt install libsdl2-dev
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
