Use git submodule for Nuked OPL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,9 @@ find_package(SDL2 REQUIRED)
 
 add_executable(droplay
 	droplay.c
-	opl3.c
-	opl3.h
+	Nuked-OPL3/opl3.c
+	Nuked-OPL3/opl3.h
 )
 
-target_include_directories(droplay PRIVATE ${SDL2_INCLUDE_DIRS})
+target_include_directories(droplay PRIVATE ${SDL2_INCLUDE_DIRS} Nuked-OPL3)
 target_link_libraries(droplay PRIVATE ${SDL2_LIBRARIES})
